--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,6 @@
-.App {
-	text-align: center;
-	background-attachment: lightgray;
-}
-
-.App-logo {
-	height: 40vmin;
-}
-
-.App-header {
-	background-color: #282c34;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
-}
-
-.App-link {
-	color: #09d3ac;
-}
-
-#App-container {
+#app-container {
 	background-color: rgba(225, 225, 225, 0.333);
+	height: 100%;
 }
 
 p {
@@ -35,39 +12,59 @@ p {
 	max-width: 100%;
 }
 
-.quick-fadein{
+.quick-fadein {
 	-webkit-animation: fadein 330ms; /* Safari, Chrome and Opera > 12.1 */
 	-moz-animation: fadein 330ms; /* Firefox < 16 */
-	 -ms-animation: fadein 330ms; /* Internet Explorer */
-	  -o-animation: fadein 330ms; /* Opera < 12.1 */
-		 animation: fadein 330ms;
+	-ms-animation: fadein 330ms; /* Internet Explorer */
+	-o-animation: fadein 330ms; /* Opera < 12.1 */
+	animation: fadein 330ms;
 }
 
 @keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
 
 /* Firefox < 16 */
 @-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
 
 /* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
 
 /* Internet Explorer */
 @-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
 
 /* Opera < 12.1 */
 @-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
